# push_swap

./: .gitignore  :w  CMakeLists.txt  Makefile  Makefile.txt  README.md  a.out  abc.c  aux_list.c  aux_list_2.c  case_10.txt  case_106.txt  case_9.txt  case_no_correct_102.txt  case_no_work.txt  case_output_106.txt  check_input.c  check_input_backup.c  chunks_algorithm.c  code_test.c  diff_sort_options.c  divide_stack.c  error.txt  free_and_erros.c  ft_atoi.c  ft_main.c  ft_split.c  funct_lists.c  input_100_1.txt  input_200.txt  input_500.txt  input_500_1.txt  input_check.c  input_validations.c  main.c  makefile.txt  moves_push.c  moves_stack.c  moves_swap.c  no_use.c  (+26 more)
incl/libft/: Makefile  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_split.c  ft_substr.c  libft.h
incl/libft/printf/: Makefile  ft_put_ptr.d  ft_put_uint_nbr.d  ft_putchar_n.d  ft_puthexa_nbr.d  ft_putnbr_n.d  ft_putstr.d
incl/libft_old/: Makefile  libft.h
incl/libft_old/printf/: Makefile  ft_printf.c  ft_printf.h
incl/printf/: ft_puthexa_nbr.c
input_cases_test/: input_0_100_0  input_0_100_1  input_0_100_2  input_500_2.txt
lib/libft/: clean.sh  ft_atoi.c  ft_atoll.c  ft_split.c  libft.h
src/: chunks_algorithm.c  chunks_aux.c  diff_sort_options.c  free_and_erros.c  functions_no_using.c  input_check.c  input_validations.c  no_use.c  push_operations.c  rev_rotates_operations.c  rotates_operations.c  stack_aux.c  stack_helper.c  stack_utils.c  swap_operations.c
test_case_input/: input_10.txt  input_100.txt  input_100_1.txt  input_102.txt  input_500_3.txt
tests/: Makefile  backup_main_test.txt  main.c  main_testing.c  test_make.txt  test_push_swap  test_size_stack.c  test_sort.c  test_swap_a.c
